# mortgage-guidelines-rag

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
evals/: config.py  dataset.py  runner.py  runner_v2.py
src/rag_mortgage_eeuu/: config.py  embeddings.py  ingest.py  main.py  retriever.py  vector_store.py
tests/: test_ingest.py
