[tool.poetry]
name = "rag-mortgage-eeuu"
version = "0.1.0"
description = "RAG system for US mortgage knowledge base (Voyage embeddings + Pinecone)."
authors = []
readme = "README.md"
packages = [{ include = "rag_mortgage_eeuu", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9"
pydantic-settings = "^2.5"
python-dotenv = "^1.0"
pinecone = "^9.1.0"
httpx = "^0.28.1"
pypdf = "^6.14.2"
langchain-text-splitters = "^1.1.2"
ragas = "^0.4.3"
google-cloud-aiplatform = "^1.159.0"
langchain-google-vertexai = "^3.2.4"
anthropic = "^0.116.0"
langchain-anthropic = "^1.4.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.15"
mypy = "^1.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
packages = ["rag_mortgage_eeuu"]
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["pinecone.*"]
ignore_missing_imports = true
